Upgrade UI to JavaFX - modern look and feel